<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/user_info_accout_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10.0dip"
        android:orientation="vertical" >

        <!-- 我的身份证 -->

        <LinearLayout
            android:id="@+id/user_info_idcard_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/my_idcards"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="5.0dip"
            android:background="@android:color/darker_gray" />
        <!-- 邮箱 -->

        <LinearLayout
            android:id="@+id/user_info_email_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5.0dip"
            android:gravity="fill_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/user_info_email"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/user_info_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:hint="@string/user_info_email_content"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="5.0dip"
            android:background="@android:color/darker_gray" />
        <!-- 手机 -->

        <LinearLayout
            android:id="@+id/user_info_phone_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5.0dip"
            android:gravity="fill_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/user_info_phone"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/user_info_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:hint="@string/user_info_phone_content"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="5.0dip"
            android:background="@android:color/darker_gray" />
        <!-- 修改密码 -->

        <LinearLayout
            android:id="@+id/user_info_pwd_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5.0dip"
            android:gravity="fill_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/user_info_pwd_reset"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="5.0dip"
            android:background="@android:color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/setting_logout_button"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_margin="10.0dip"
            android:background="@color/red"
            android:text="@string/setting_logout"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>