<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/baise"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/order_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_number"
            android:textColor="@drawable/shenhuise"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@drawable/shenhuise"
            android:textSize="16sp"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/order_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_time"
            android:textColor="@drawable/shenhuise"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@drawable/shenhuise"
            android:textSize="16sp"
            android:textStyle="normal" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/qianhuise" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/order_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_amount"
            android:textColor="@drawable/shenhuise"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@drawable/dahong"
            android:textSize="16sp"
            android:textStyle="normal" />
    </LinearLayout>

    <Button
        android:id="@+id/taobao_pay_btn"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/taobao_pay_btn"
        android:textColor="@drawable/dahong"
        android:textSize="16sp"
        android:background="#ccc"
        />

    <TextView
        android:id="@+id/pay_message"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/taobao_pay_btn"
        android:textColor="@drawable/dahong"
        android:textSize="16sp"
        android:visibility="gone" />

</LinearLayout>