<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@drawable/head_bg"
    android:gravity="center|left"
    android:orientation="horizontal"
    android:paddingBottom="0dp"
    android:paddingLeft="2dp"
    android:paddingRight="2dp"
    android:paddingTop="0dp" >

    <LinearLayout
        android:id="@+id/layout_back_normal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:gravity="center|center"
        android:orientation="horizontal" >

        <!-- <ImageView
            android:id="@+id/btn_back_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dip"
            android:contentDescription="@string/search"
            android:src="@drawable/btn_back_bg" /> -->
    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_content_frame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/search_bg"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp" >

        <ImageView
            android:id="@+id/search_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/search"
            android:src="@drawable/ic_search" />

        <EditText
            android:id="@+id/search_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@android:color/transparent"
            android:hint="@string/search_hint"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLength="20"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:gravity="center|center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/header_right_btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/delete"
            android:src="@drawable/clear_click" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_alignParentBottom="true"
        android:background="@drawable/qianhuise" >
    </View>

</RelativeLayout>