<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="10.0dip"
    android:background="@color/coral"
    android:orientation="vertical" >

    <!-- 我的订单 -->

    <LinearLayout
        android:id="@+id/mysmile_myorders_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="5.0dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:hint="@string/my_orders"
            android:textSize="18sp" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:layout_marginRight="5dip"
            android:gravity="center_vertical"
            android:text="@string/user_info_right"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:id="@+id/mysmile_horizontal_line2"
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:layout_below="@id/mysmile_myorders_layout"
        android:layout_centerVertical="true"
        android:layout_marginLeft="5.0dip"
        android:layout_marginRight="5.0dip"
        android:background="@android:color/darker_gray" />

    <!-- 我的优惠券 -->

    <LinearLayout
        android:id="@+id/mysmile_mycoupon_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/mysmile_horizontal_line2"
        android:layout_margin="5.0dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:hint="@string/my_coupons"
            android:textSize="18sp" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:layout_marginRight="5dip"
            android:gravity="center_vertical"
            android:text="@string/user_info_right"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:id="@+id/mysmile_horizontal_line3"
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:layout_below="@id/mysmile_mycoupon_layout"
        android:layout_centerVertical="true"
        android:layout_marginLeft="5.0dip"
        android:layout_marginRight="5.0dip"
        android:background="@android:color/darker_gray" />

    <!-- 个人设置 -->

    <LinearLayout
        android:id="@+id/mysmile_setting_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/mysmile_horizontal_line3"
        android:layout_margin="5.0dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:hint="@string/personal_information"
            android:textSize="18sp" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:layout_marginRight="5dip"
            android:gravity="center_vertical"
            android:text="@string/user_info_right"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>