<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_body_bg"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/header" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="14.0dip" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:background="@drawable/new_edit_text_bg"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="48.0dip"
                    android:gravity="center_vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12.0dip"
                        android:text="账号:"
                        android:textColor="@color/black"
                        android:textSize="@dimen/app_textsize_main_new" />

                    <EditText
                        android:id="@+id/login_account"
                        android:layout_width="0.0dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1.0"
                        android:background="@null"
                        android:hint="@string/login_username_hint"
                        android:imeOptions="actionNext"
                        android:maxLength="35"
                        android:paddingLeft="9.0dip"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/app_text_black"
                        android:textColorHint="@color/app_text_gray"
                        android:textSize="@dimen/app_textsize_main_new" />

                    <ImageView
                        android:id="@+id/username_del"
                        android:layout_width="20.0dip"
                        android:layout_height="20.0dip"
                        android:layout_marginLeft="7.0dip"
                        android:layout_marginRight="11.5dip"
                        android:src="@drawable/new_ic_edit_clear"
                        android:visibility="gone" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1.0dip"
                    android:background="@color/btn_vertical_line_1"
                    android:paddingBottom="10.0dip"
                    android:paddingLeft="3.0dip" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="48.0dip"
                    android:gravity="center_vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12.0dip"
                        android:text="密码:"
                        android:textColor="@color/black"
                        android:textSize="@dimen/app_textsize_main_new" />

                    <EditText
                        android:id="@+id/login_pwd"
                        android:layout_width="0.0dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1.0"
                        android:background="@null"
                        android:hint="@string/login_password_hint"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLength="25"
                        android:paddingLeft="9.0dip"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/app_text_black"
                        android:textColorHint="@color/app_text_gray"
                        android:textSize="@dimen/app_textsize_main_new" />

                    <ImageView
                        android:id="@+id/password_del"
                        android:layout_width="20.0dip"
                        android:layout_height="20.0dip"
                        android:layout_marginLeft="7.0dip"
                        android:layout_marginRight="11.5dip"
                        android:src="@drawable/new_ic_edit_clear"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14.0dip"
                android:gravity="center_vertical"
                android:paddingLeft="1.0dip"
                android:paddingRight="2.0dip" >

                <LinearLayout
                    android:id="@+id/auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/auto_image"
                        android:layout_width="20.0dip"
                        android:layout_height="20.0dip"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/new_cb_checked" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="6.0dip"
                        android:text="@string/login_autologin_info"
                        android:textColor="@color/app_text_gray"
                        android:textSize="@dimen/app_textsize_main_new" />
                </LinearLayout>

                <Button
                    android:id="@+id/login_btn_getbackpwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:text="找回密码"
                    android:textColor="@color/app_text_gray"
                    android:textSize="@dimen/app_textsize_main_new" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="19.0dip"
                android:layout_marginTop="15.0dip"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/login_btn_to_register"
                    android:layout_width="0.0dip"
                    android:layout_height="40.0dip"
                    android:layout_marginRight="9.0dip"
                    android:layout_weight="5.0"
                    android:background="@drawable/submit_white_button"
                    android:gravity="center"
                    android:text="@string/btn_register"
                    android:textColor="@color/app_text_black"
                    android:textSize="@dimen/app_textsize_button" />

                <Button
                    android:id="@+id/self_login"
                    android:layout_width="0.0dip"
                    android:layout_height="40.0dip"
                    android:layout_weight="6.0"
                    android:background="@drawable/submit_red_button"
                    android:gravity="center"
                    android:text="@string/login_btn_info"
                    android:textColor="@color/app_text_white"
                    android:textSize="@dimen/app_textsize_button" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>